--- a/menu.html
+++ b/menu.html
@@ -193,7 +193,7 @@
                 <a class="cat-link" onclick="updateMenu('beverage', this)">08. Liquid Gold</a>
             </div>
 
-            <div class="footer-note">EST. 2026 // KUALA LUMPUR</div>
+            <div class="footer-note">EST. 2026 // DERZA CAFE</div>
         </div>
 
         <div class="content-section" id="scrollArea">
@@ -368,4 +368,5 @@
         };
     </script>
 </body>
+
 </html>
