--- a/location.html
+++ b/location.html
@@ -134,10 +134,10 @@
             </div>
 
             <div class="nav-buttons">
-                <a href="https://maps.google.com" target="_blank" class="btn-nav">
+                <a href="https://maps.app.goo.gl/Xx8adR13GiiVPMNB9" target="_blank" class="btn-nav">
                     Google Maps
                 </a>
-                <a href="https://waze.com" target="_blank" class="btn-nav">
+                <a href="https://ul.waze.com/ul?place=ChIJX4QeMwDztjERwWybNt3YNnM&ll=5.72142930%2C102.49071850&navigate=yes&utm_campaign=default&utm_source=waze_website&utm_medium=lm_share_location" target="_blank" class="btn-nav">
                     Waze Navigation
                 </a>
             </div>
@@ -145,4 +145,5 @@
     </div>
 
 </body>
+
 </html>
