--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,6 @@
             animation: fadeIn 1s ease-out;
         }
 
-        /* Info Section */
         .contact-info {
             padding: 40px;
             text-align: left;
@@ -78,8 +77,7 @@
             padding-left: 5px;
             color: var(--accent-gold);
         }
-
-        /* Form Section */
+        
         .contact-form-card {
             background: rgba(255, 255, 255, 0.03);
             backdrop-filter: blur(25px);
@@ -133,7 +131,6 @@
             box-shadow: 0 10px 20px rgba(212, 163, 115, 0.2);
         }
 
-        /* Responsive Mobile */
         @media (max-width: 768px) {
             .container { grid-template-columns: 1fr; overflow-y: auto; height: 80vh; }
             .contact-info { padding: 20px; text-align: center; }
@@ -173,7 +170,7 @@
         </div>
 
         <div class="contact-form-card">
-            <form action="#">
+            <form action="https://formspree.io/f/mnjjjoag" method="POST">
                 <div class="input-group">
                     <input type="text" placeholder="YOUR NAME" required>
                 </div>
@@ -189,4 +186,5 @@
     </div>
 
 </body>
+
 </html>
