--- a/contact.html
+++ b/contact.html
@@ -172,13 +172,13 @@
         <div class="contact-form-card">
             <form action="https://formspree.io/f/mnjjjoag" method="POST">
                 <div class="input-group">
-                    <input type="text" placeholder="YOUR NAME" required>
+                    <input type="text" name="name" placeholder="YOUR NAME" required>
                 </div>
                 <div class="input-group">
-                    <input type="email" placeholder="YOUR EMAIL" required>
+                    <input type="email" name="email" placeholder="YOUR EMAIL" required>
                 </div>
                 <div class="input-group">
-                    <textarea placeholder="MESSAGE" rows="4" required></textarea>
+                    <textarea placeholder="MESSAGE" name="message" rows="4" required></textarea>
                 </div>
                 <button type="submit" class="btn-send">Send Message</button>
             </form>
@@ -188,3 +188,4 @@
 </body>
 
 </html>
+
