--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,6 @@
             width: 100%;
         }
 
-        /* Bahagian Kiri - Navigasi */
         .nav-section {
             width: 35%;
             padding: 60px 80px;
@@ -47,7 +46,6 @@
             opacity: 0.8;
         }
 
-        /* Mengecilkan senarai kategori di sebelah kiri */
         .category-list {
             margin: 40px 0;
         }
@@ -55,7 +53,7 @@
         .cat-link {
             display: block;
             font-family: 'Poppins', sans-serif;
-            font-size: 13px; /* Mengecilkan tulisan navigasi */
+            font-size: 13px; 
             font-weight: 300;
             text-decoration: none;
             color: rgba(255, 255, 255, 0.3);
@@ -79,7 +77,6 @@
             opacity: 0.3;
         }
 
-        /* Bahagian Kanan - Menu Display */
         .content-section {
             width: 65%;
             padding: 80px 100px;
@@ -90,9 +87,8 @@
         .content-section::-webkit-scrollbar { width: 3px; }
         .content-section::-webkit-scrollbar-thumb { background: var(--accent-gold); }
 
-        /* Jarak yang lebih jauh antara Header dan list */
         .menu-header {
-            margin-bottom: 80px; /* Tambah jarak supaya tak nampak dekat sangat */
+            margin-bottom: 80px; 
             animation: fadeInDown 1s forwards;
             border-bottom: 1px solid rgba(197, 160, 89, 0.2);
             padding-bottom: 30px;
@@ -100,7 +96,7 @@
 
         .menu-header h2 {
             font-family: 'Playfair Display', serif;
-            font-size: 32px; /* Mengecilkan tajuk New Arrivals dll */
+            font-size: 32px; 
             margin: 0;
             color: var(--accent-gold);
             font-weight: 400;
@@ -117,7 +113,6 @@
             display: block;
         }
 
-        /* Menu Items */
         .item-row {
             margin-bottom: 35px;
             display: flex;
@@ -143,7 +138,6 @@
             max-width: 85%;
         }
 
-        /* Back Button */
         .btn-exit {
             position: fixed; top: 40px; right: 40px;
             z-index: 100; color: white; text-decoration: none;
@@ -370,3 +364,4 @@
 </body>
 
 </html>
+
