--- a/opentime.html
+++ b/opentime.html
@@ -19,7 +19,6 @@
             overflow: hidden;
         }
 
-        /* Background dengan Overlay Gelap */
         .bg-overlay {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
@@ -38,7 +37,6 @@
             animation: fadeIn 1s ease-out;
         }
 
-        /* Card Style */
         .info-card {
             background: rgba(255, 255, 255, 0.03);
             backdrop-filter: blur(25px);
@@ -67,7 +65,6 @@
             display: block;
         }
 
-        /* Time Rows */
         .time-row {
             display: flex;
             justify-content: space-between;
@@ -94,8 +91,7 @@
             font-weight: 400;
             font-style: italic;
         }
-
-        /* Status Badge */
+        
         #statusBadge {
             display: inline-flex;
             align-items: center;
@@ -146,7 +142,7 @@
     <script>
         function updateStatus() {
             const now = new Date();
-            const day = now.getDay(); // 0: Sunday, 5: Friday
+            const day = now.getDay(); 
             const hour = now.getHours();
             const badge = document.getElementById('statusBadge');
 
@@ -166,4 +162,5 @@
         setInterval(updateStatus, 60000);
     </script>
 </body>
+
 </html>
