--- a/location.html
+++ b/location.html
@@ -64,7 +64,6 @@
             line-height: 1.6;
         }
 
-        /* Map Container */
         .map-container {
             width: 100%;
             height: 300px;
@@ -77,10 +76,9 @@
         iframe {
             width: 100%;
             height: 100%;
-            filter: grayscale(100%) invert(90%) contrast(90%); /* Tema Map Gelap */
+            filter: grayscale(100%) invert(90%) contrast(90%); 
         }
 
-        /* Action Buttons */
         .nav-buttons {
             display: flex;
             gap: 15px;
@@ -147,3 +145,4 @@
 </body>
 
 </html>
+
